charts/frontend/bluegreen/bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-bluegreen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP   
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-preview
spec:
  selector:
    app: frontend-bluegreen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
