charts/frontend/bluegreen/ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-rollouts-active
  namespace: edu3
spec:
  host: frontend-rollouts-active.apps.211-34-231-93.nip.io
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-rollouts-preview
  namespace: edu3
spec:
  host: frontend-rollouts-preview.apps.211-34-231-93.nip.io
  to:
    kind: Service
    name: frontend-preview
    weight: 100
  port:
    targetPort: frontend-preview
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
